# IndexWeaver

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: release.yml
include/: indexweaver.inc
src/: main.cpp  mapper_store.cpp  mapper_store.hpp  natives.cpp  natives.hpp
tests/: test_store.cpp  test_stress.cpp
